tests/fixtures/invalid/round_set_float.py
# Cannot call round() with Set[int], Float
x = round({1, 2, 3}, 1.0)
